// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoanAction component LoanAction List.Item for each action 1`] = `
<LoanActions
  actions={Object {}}
  availableActions={
    Object {
      "action": "url",
      "anotheraction": "another-url",
    }
  }
  data={
    Object {
      "title": "A title",
    }
  }
  onAction={[Function]}
>
  <List
    horizontal={true}
  >
    <div
      className="ui horizontal list"
      role="list"
    />
  </List>
</LoanActions>
`;

exports[`LoanAction component LoanAction initial state and props 1`] = `
<LoanActions
  actions={Object {}}
  data={Object {}}
  onAction={[Function]}
>
  <List
    horizontal={true}
  >
    <div
      className="ui horizontal list"
      role="list"
    />
  </List>
</LoanActions>
`;

exports[`LoanAction component LoanAction renders loader on action triggered 1`] = `
<LoanActions
  actionLoading={true}
  actions={Object {}}
  data={Object {}}
  onAction={[Function]}
>
  <List
    horizontal={true}
  >
    <div
      className="ui horizontal list"
      role="list"
    />
  </List>
</LoanActions>
`;

exports[`LoanAction component renders loader on action triggered 1`] = `
<LoanActions
  actionLoading={true}
  actions={Object {}}
  data={Object {}}
  onAction={[Function]}
>
  <List
    horizontal={true}
  >
    <div
      className="ui horizontal list"
      role="list"
    />
  </List>
</LoanActions>
`;
